Esqueleto inicial completo